--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.mj.aop_part5_chapter02"
-        minSdkVersion 24
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -39,19 +39,25 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //koin DI
-    implementation 'org.koin:koin-android:2.1.5'
-    implementation 'org.koin:koin-android-scope:2.1.5'
-    implementation 'org.koin:koin-android-viewmodel:2.1.5'
-    implementation 'org.koin:koin-android-ext:2.1.5'
+//    implementation 'org.koin:koin-android:2.1.5'
+//    implementation 'org.koin:koin-android-scope:2.1.5'
+//    implementation 'org.koin:koin-android-viewmodel:2.1.5'
+//    implementation 'org.koin:koin-android-ext:2.1.5'
+
+    // Koin AndroidX Scope features
+    implementation "io.insert-koin:koin-androidx-scope:2.2.3"
+    implementation "io.insert-koin:koin-androidx-viewmodel:2.2.3"
+    implementation "io.insert-koin:koin-androidx-fragment:2.2.3"
+    implementation "io.insert-koin:koin-androidx-ext:2.2.3"
 
     //coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
