--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mj.aop_part5_chapter02">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -12,13 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-        <activity android:name=".presentation.main.MainActivity"
+        <activity
+            android:name=".presentation.detail.ProductDetailActivity"
+            android:exported="true" />
+        <activity
+            android:name=".presentation.main.MainActivity"
             android:theme="@style/Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
