--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true">
         <activity
             android:name=".presentation.detail.ProductDetailActivity"
-            android:exported="true" />
+            android:theme="@style/AppTheme.PopupOverlay"/>
         <activity
             android:name=".presentation.main.MainActivity"
             android:theme="@style/Theme.AppCompat">
